# photosphere-v2

./: .dockerignore  .gitignore  README.md  cors.json  deploy.sh  docker-compose.yaml  firebase_sdk_setup.sh  storage.rules
doc/: BillingAccountLinkError.md  FirebaseGoogleAuth.md
script/: .gitignore  .tool-versions  README.MD  deploy.sh  pyproject.toml  pytest.ini
script/resources/original_images/: landscape_macos.HEIC
script/src/: main.py
script/src/cloud/: sync_in_cloud.py
script/src/cloud/bucket/: storage_firebase.py
script/src/file/: local_file.py  path.py
script/src/file/image/: image.py
script/src/file/video/: video.py
script/src/gps/: gps.py
script/src/local/: generate_local_database.py  local_folders_name.py  organize_files.py  utils.py
script/src/protobuf/: converter.py  photosphere_file.proto
script/src/util/: dict_utils.py
script/tests/: load_test.py
script/tests/file/image/: test_image.py
script/tests/file/video/: test_video.py
script/tests/local/: test_utils.py
script/tests/util/: test_dict_utils.py
spa/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.vitest.json  vite.config.ts
spa/src/: App.vue  env.d.ts  main.ts
spa/src/components/: FileGridListByDayComponent.vue  FileGridListComponent.vue  HeaderPageComponent.vue
spa/src/interfaces/: IAlbum.ts  IFileFilters.ts  ILocation.ts  IPhotosphereViewFile.ts
spa/src/modals/: AlbumContentViewModal.vue  DateRangeModal.vue  FileActionModal.vue  LocationModal.vue  SelectAlbumModal.vue  SelectedFilesActionModal.vue
spa/src/router/: index.ts
(+16 files in other folders)
